// Vitest Snapshot v1

exports[`Badge > Badge baseVue demo works fine 1`] = `
<div>
  <div
    class="summary"
  >
    红点徽标
  </div>
  <div
    class="badge-demo"
  >
    <div
      class="t-badge badge-item"
    >
      <div
        class="t-badge__content"
      >
        <span
          class="t-badge__content-text"
        >
          消息
        </span>
      </div>
      <div
        class="t-badge--basic t-badge--dot t-badge--medium t-badge--circle t-has-count"
        style="right: -4px; top: 4px;"
      >
        <!--v-if-->
          
        <!--v-if-->
      </div>
      <!---->
    </div>
    <div
      class="t-badge badge-item"
    >
      <div
        class="t-badge__content"
      >
        
        <svg
          aria-label="通知"
          class="t-icon t-icon-notification"
        >
          <use
            href="#t-icon-notification"
          />
        </svg>
        
      </div>
      <div
        class="t-badge--basic t-badge--dot t-badge--medium t-badge--circle t-has-count"
        style="right: 1px; top: -1px;"
      >
        <!--v-if-->
          
        <!--v-if-->
      </div>
      <!---->
    </div>
    <div
      class="t-badge badge-item"
    >
      <div
        class="t-badge__content"
      >
        
        <button
          aria-disabled="false"
          class="t-button t-button--size-medium t-button--base t-button--default t-button--rectangle"
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            按钮
            
          </span>
          <!---->
        </button>
        
      </div>
      <div
        class="t-badge--basic t-badge--dot t-badge--medium t-badge--circle t-has-count"
        style="right: 1px; top: 1px;"
      >
        <!--v-if-->
          
        <!--v-if-->
      </div>
      <!---->
    </div>
  </div>
  <div
    class="summary"
  >
    数字徽标
  </div>
  <div
    class="badge-demo"
  >
    <div
      class="t-badge badge-item"
    >
      <div
        class="t-badge__content"
      >
        <span
          class="t-badge__content-text"
        >
          消息
        </span>
      </div>
      <div
        class="t-badge--basic t-badge--medium t-badge--circle t-badge--count t-has-count"
        style="right: -8px; top: 0px;"
      >
        <!--v-if-->
         8 
        <!--v-if-->
      </div>
      <!---->
    </div>
    <div
      class="t-badge badge-item"
    >
      <div
        class="t-badge__content"
      >
        
        <svg
          aria-label="通知"
          class="t-icon t-icon-notification"
        >
          <use
            href="#t-icon-notification"
          />
        </svg>
        
      </div>
      <div
        class="t-badge--basic t-badge--medium t-badge--circle t-badge--count t-has-count"
        style="right: -2px; top: -2px;"
      >
        <!--v-if-->
         2 
        <!--v-if-->
      </div>
      <!---->
    </div>
    <div
      class="t-badge badge-item"
    >
      <div
        class="t-badge__content"
      >
        
        <button
          aria-disabled="false"
          class="t-button t-button--size-medium t-button--base t-button--default t-button--rectangle"
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            按钮
            
          </span>
          <!---->
        </button>
        
      </div>
      <div
        class="t-badge--basic t-badge--medium t-badge--circle t-badge--count t-has-count"
        style="right: 2px; top: 2px;"
      >
        <!--v-if-->
         8 
        <!--v-if-->
      </div>
      <!---->
    </div>
  </div>
  <div
    class="summary"
  >
    自定义徽标
  </div>
  <div
    class="badge-demo"
  >
    <div
      aria-role="button"
      class="t-badge"
    >
      <div
        class="t-badge__content"
      >
        
        <button
          aria-disabled="false"
          aria-label="通知"
          class="t-button t-button--size-large t-button--base t-button--default t-button--square"
          role="button"
          type="button"
        >
          <svg
            class="t-icon t-icon-notification"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8.5 2.03V1h-1v1.03a4.5 4.5 0 00-4 4.47V11l-.9 1.2a.5.5 0 00.4.8h2.55a2.5 2.5 0 004.9 0H13a.5.5 0 00.4-.8l-.9-1.2V6.5a4.5 4.5 0 00-4-4.47zm-4 9.3V6.5a3.5 3.5 0 117 0v4.83l.5.67H4l.5-.67zM8 14a1.5 1.5 0 01-1.41-1H9.4c-.2.58-.76 1-1.41 1z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
          <span
            class="t-button__content"
          >
            <!---->
          </span>
          <!---->
        </button>
        
      </div>
      <div
        class="t-badge--basic t-badge--medium t-badge--circle t-badge--count t-has-count"
        style="right: 0px; top: 2px;"
      >
        <!--v-if-->
         NEW 
        <!--v-if-->
      </div>
      <!---->
    </div>
  </div>
</div>
`;

exports[`Badge > Badge mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
>
  <h1
    class="title"
  >
    Badge 徽标
  </h1>
  <p
    class="summary"
  >
    用于告知用户，该区域的状态变化或者待处理任务的数量。
  </p>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        01 组件类型
      </h2>
      <!--v-if-->
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div>
        <div
          class="summary"
        >
          红点徽标
        </div>
        <div
          class="badge-demo"
        >
          <div
            class="t-badge badge-item"
          >
            <div
              class="t-badge__content"
            >
              <span
                class="t-badge__content-text"
              >
                消息
              </span>
            </div>
            <div
              class="t-badge--basic t-badge--dot t-badge--medium t-badge--circle t-has-count"
              style="right: -4px; top: 4px;"
            >
              <!--v-if-->
                
              <!--v-if-->
            </div>
            <!---->
          </div>
          <div
            class="t-badge badge-item"
          >
            <div
              class="t-badge__content"
            >
              
              <svg
                aria-label="通知"
                class="t-icon t-icon-notification"
              >
                <use
                  href="#t-icon-notification"
                />
              </svg>
              
            </div>
            <div
              class="t-badge--basic t-badge--dot t-badge--medium t-badge--circle t-has-count"
              style="right: 1px; top: -1px;"
            >
              <!--v-if-->
                
              <!--v-if-->
            </div>
            <!---->
          </div>
          <div
            class="t-badge badge-item"
          >
            <div
              class="t-badge__content"
            >
              
              <button
                aria-disabled="false"
                class="t-button t-button--size-medium t-button--base t-button--default t-button--rectangle"
                role="button"
                type="button"
              >
                <!---->
                <span
                  class="t-button__content"
                >
                  
                  按钮
                  
                </span>
                <!---->
              </button>
              
            </div>
            <div
              class="t-badge--basic t-badge--dot t-badge--medium t-badge--circle t-has-count"
              style="right: 1px; top: 1px;"
            >
              <!--v-if-->
                
              <!--v-if-->
            </div>
            <!---->
          </div>
        </div>
        <div
          class="summary"
        >
          数字徽标
        </div>
        <div
          class="badge-demo"
        >
          <div
            class="t-badge badge-item"
          >
            <div
              class="t-badge__content"
            >
              <span
                class="t-badge__content-text"
              >
                消息
              </span>
            </div>
            <div
              class="t-badge--basic t-badge--medium t-badge--circle t-badge--count t-has-count"
              style="right: -8px; top: 0px;"
            >
              <!--v-if-->
               8 
              <!--v-if-->
            </div>
            <!---->
          </div>
        </div>
        <div
          class="summary"
        >
          数字徽标
        </div>
        <div
          class="badge-demo"
        >
          <div
            class="t-badge badge-item"
          >
            <div
              class="t-badge__content"
            >
              
              <svg
                aria-label="通知"
                class="t-icon t-icon-notification"
              >
                <use
                  href="#t-icon-notification"
                />
              </svg>
              
            </div>
            <div
              class="t-badge--basic t-badge--medium t-badge--circle t-badge--count t-has-count"
              style="right: -2px; top: -2px;"
            >
              <!--v-if-->
               2 
              <!--v-if-->
            </div>
            <!---->
          </div>
          <div
            class="t-badge badge-item"
          >
            <div
              class="t-badge__content"
            >
              
              <button
                aria-disabled="false"
                class="t-button t-button--size-medium t-button--base t-button--default t-button--rectangle"
                role="button"
                type="button"
              >
                <!---->
                <span
                  class="t-button__content"
                >
                  
                  按钮
                  
                </span>
                <!---->
              </button>
              
            </div>
            <div
              class="t-badge--basic t-badge--medium t-badge--circle t-badge--count t-has-count"
              style="right: 2px; top: 2px;"
            >
              <!--v-if-->
               8 
              <!--v-if-->
            </div>
            <!---->
          </div>
        </div>
        <div
          class="summary"
        >
          自定义徽标
        </div>
        <div
          class="badge-demo"
        >
          <div
            aria-role="button"
            class="t-badge"
          >
            <div
              class="t-badge__content"
            >
              
              <button
                aria-disabled="false"
                aria-label="通知"
                class="t-button t-button--size-large t-button--base t-button--default t-button--square"
                role="button"
                type="button"
              >
                <svg
                  class="t-icon t-icon-notification"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M8.5 2.03V1h-1v1.03a4.5 4.5 0 00-4 4.47V11l-.9 1.2a.5.5 0 00.4.8h2.55a2.5 2.5 0 004.9 0H13a.5.5 0 00.4-.8l-.9-1.2V6.5a4.5 4.5 0 00-4-4.47zm-4 9.3V6.5a3.5 3.5 0 117 0v4.83l.5.67H4l.5-.67zM8 14a1.5 1.5 0 01-1.41-1H9.4c-.2.58-.76 1-1.41 1z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
                <span
                  class="t-button__content"
                >
                  <!---->
                </span>
                <!---->
              </button>
              
            </div>
            <div
              class="t-badge--basic t-badge--medium t-badge--circle t-badge--count t-has-count"
              style="right: 0px; top: 2px;"
            >
              <!--v-if-->
               NEW 
              <!--v-if-->
            </div>
            <!---->
          </div>
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        02 组件样式
      </h2>
      <!--v-if-->
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div>
        <div
          class="summary"
        >
          圆形徽标
        </div>
        <div
          class="badge-demo"
        >
          <div
            class="t-badge"
          >
            <div
              class="t-badge__content"
            >
              
              <svg
                aria-label="通知"
                class="t-icon t-icon-notification"
              >
                <use
                  href="#t-icon-notification"
                />
              </svg>
              
            </div>
            <div
              class="t-badge--basic t-badge--medium t-badge--circle t-badge--count t-has-count"
              style="right: -2px; top: -2px;"
            >
              <!--v-if-->
               2 
              <!--v-if-->
            </div>
            <!---->
          </div>
        </div>
        <div
          class="summary"
        >
          方形徽标
        </div>
        <div
          class="badge-demo"
        >
          <div
            class="t-badge"
          >
            <div
              class="t-badge__content"
            >
              
              <svg
                aria-label="通知"
                class="t-icon t-icon-notification"
              >
                <use
                  href="#t-icon-notification"
                />
              </svg>
              
            </div>
            <div
              class="t-badge--basic t-badge--medium t-badge--square t-badge--count t-has-count"
              style="right: -2px; top: -2px;"
            >
              <!--v-if-->
               2 
              <!--v-if-->
            </div>
            <!---->
          </div>
        </div>
        <div
          class="summary"
        >
          气泡徽标
        </div>
        <div
          class="badge-demo"
        >
          <div
            aria-role="button"
            class="t-badge"
          >
            <div
              class="t-badge__content"
            >
              
              <button
                aria-disabled="false"
                aria-label="商店"
                class="t-button t-button--size-large t-button--base t-button--default t-button--square"
                role="button"
                type="button"
              >
                <svg
                  class="t-icon t-icon-shop"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M8 1a2.5 2.5 0 00-2.5 2.5V5h-2a.5.5 0 00-.5.5v9c0 .28.22.5.5.5h9a.5.5 0 00.5-.5v-9a.5.5 0 00-.5-.5h-2V3.5A2.5 2.5 0 008 1zm1.5 5v2h1V6H12v8H4V6h1.5v2h1V6h3zm0-1h-3V3.5a1.5 1.5 0 113 0V5z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
                <span
                  class="t-button__content"
                >
                  <!---->
                </span>
                <!---->
              </button>
              
            </div>
            <div
              class="t-badge--basic t-badge--medium t-badge--bubble t-badge--count t-has-count"
            >
              <!--v-if-->
               领积分 
              <!--v-if-->
            </div>
            <!---->
          </div>
        </div>
        <div
          class="summary"
          style="margin-bottom: 16px;"
        >
          角标
        </div>
        <div
          class="t-cell t-cell--middle"
        >
          <div
            class="t-cell__left"
          >
            <!--v-if-->
            <!--v-if-->
          </div>
          <div
            class="t-cell__title"
          >
            单行标题
            <!--v-if-->
            <!--v-if-->
          </div>
          <div
            class="t-cell__note"
          >
            
            <div
              class="t-badge t-badge__ribbon-outer"
            >
              <div
                class="t-badge__content"
              >
                <!---->
              </div>
              <div
                class="t-badge--basic t-badge--medium t-badge--ribbon t-badge--count t-has-count"
                style="right: 0px; top: 0px;"
              >
                <div
                  class="t-badge__ribbon--before"
                  style=""
                />
                 New 
                <div
                  class="t-badge__ribbon--after"
                  style=""
                />
              </div>
              <!---->
            </div>
            
          </div>
          <!--v-if-->
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        03 组件尺寸
      </h2>
      <!--v-if-->
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div>
        <div
          class="summary"
        >
          Large
        </div>
        <div
          class="block"
        >
          <div
            class="t-avatar t-size-l t-avatar--circle"
          >
            <div
              class="t-avatar__inner"
            >
              <div
                class="t-avatar__icon"
              >
                <svg
                  class="t-icon t-icon-user"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M11.5 5a3.5 3.5 0 11-7 0 3.5 3.5 0 017 0zm-1 0a2.5 2.5 0 10-5 0 2.5 2.5 0 005 0zM13.96 10.85c.34.16.54.5.54.87V14a.5.5 0 01-.5.5H2a.5.5 0 01-.5-.5v-2.28c0-.37.2-.7.54-.87a13.79 13.79 0 0111.92 0zM8 10.5c-1.97 0-3.83.45-5.5 1.24v1.76h11v-1.76A12.78 12.78 0 008 10.5z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </div>
            </div>
            <div
              class="t-avatar__badge"
            >
              <div
                class="t-badge"
              >
                <div
                  class="t-badge__content"
                >
                  <!---->
                </div>
                <div
                  class="t-badge--basic t-badge--large t-badge--circle t-badge--count t-has-count"
                  style="right: 7px; top: 7px;"
                >
                  <!--v-if-->
                   8 
                  <!--v-if-->
                </div>
                <!---->
              </div>
            </div>
          </div>
        </div>
        <div
          class="summary"
        >
          Middle
        </div>
        <div
          class="block"
        >
          <div
            class="t-avatar t-avatar--circle"
          >
            <div
              class="t-avatar__inner"
            >
              <div
                class="t-avatar__icon"
              >
                <svg
                  class="t-icon t-icon-user"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M11.5 5a3.5 3.5 0 11-7 0 3.5 3.5 0 017 0zm-1 0a2.5 2.5 0 10-5 0 2.5 2.5 0 005 0zM13.96 10.85c.34.16.54.5.54.87V14a.5.5 0 01-.5.5H2a.5.5 0 01-.5-.5v-2.28c0-.37.2-.7.54-.87a13.79 13.79 0 0111.92 0zM8 10.5c-1.97 0-3.83.45-5.5 1.24v1.76h11v-1.76A12.78 12.78 0 008 10.5z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </div>
            </div>
            <div
              class="t-avatar__badge"
            >
              <div
                class="t-badge"
              >
                <div
                  class="t-badge__content"
                >
                  <!---->
                </div>
                <div
                  class="t-badge--basic t-badge--medium t-badge--circle t-badge--count t-has-count"
                  style="right: 5px; top: 5px;"
                >
                  <!--v-if-->
                   8 
                  <!--v-if-->
                </div>
                <!---->
              </div>
            </div>
          </div>
        </div>
      </div>
      
    </div>
  </div>
</div>
`;

exports[`Badge > Badge sizeVue demo works fine 1`] = `
<div>
  <div
    class="summary"
  >
    Large
  </div>
  <div
    class="block"
  >
    <div
      class="t-avatar t-size-l t-avatar--circle"
    >
      <div
        class="t-avatar__inner"
      >
        <div
          class="t-avatar__icon"
        >
          <svg
            class="t-icon t-icon-user"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M11.5 5a3.5 3.5 0 11-7 0 3.5 3.5 0 017 0zm-1 0a2.5 2.5 0 10-5 0 2.5 2.5 0 005 0zM13.96 10.85c.34.16.54.5.54.87V14a.5.5 0 01-.5.5H2a.5.5 0 01-.5-.5v-2.28c0-.37.2-.7.54-.87a13.79 13.79 0 0111.92 0zM8 10.5c-1.97 0-3.83.45-5.5 1.24v1.76h11v-1.76A12.78 12.78 0 008 10.5z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
      </div>
      <div
        class="t-avatar__badge"
      >
        <div
          class="t-badge"
        >
          <div
            class="t-badge__content"
          >
            <!---->
          </div>
          <div
            class="t-badge--basic t-badge--large t-badge--circle t-badge--count t-has-count"
            style="right: 7px; top: 7px;"
          >
            <!--v-if-->
             8 
            <!--v-if-->
          </div>
          <!---->
        </div>
      </div>
    </div>
  </div>
  <div
    class="summary"
  >
    Middle
  </div>
  <div
    class="block"
  >
    <div
      class="t-avatar t-avatar--circle"
    >
      <div
        class="t-avatar__inner"
      >
        <div
          class="t-avatar__icon"
        >
          <svg
            class="t-icon t-icon-user"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M11.5 5a3.5 3.5 0 11-7 0 3.5 3.5 0 017 0zm-1 0a2.5 2.5 0 10-5 0 2.5 2.5 0 005 0zM13.96 10.85c.34.16.54.5.54.87V14a.5.5 0 01-.5.5H2a.5.5 0 01-.5-.5v-2.28c0-.37.2-.7.54-.87a13.79 13.79 0 0111.92 0zM8 10.5c-1.97 0-3.83.45-5.5 1.24v1.76h11v-1.76A12.78 12.78 0 008 10.5z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
      </div>
      <div
        class="t-avatar__badge"
      >
        <div
          class="t-badge"
        >
          <div
            class="t-badge__content"
          >
            <!---->
          </div>
          <div
            class="t-badge--basic t-badge--medium t-badge--circle t-badge--count t-has-count"
            style="right: 5px; top: 5px;"
          >
            <!--v-if-->
             8 
            <!--v-if-->
          </div>
          <!---->
        </div>
        <div
          class="t-badge--basic t-badge--medium t-badge--ribbon t-badge--count t-has-count"
          style="right: 0px; top: 0px;"
        >
          <div
            class="t-badge__ribbon--before"
            style=""
          />
           New 
          <div
            class="t-badge__ribbon--after"
            style=""
          />
        </div>
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`Badge > Badge themeVue demo works fine 1`] = `
<div>
  <div
    class="summary"
  >
    圆形徽标
  </div>
  <div
    class="badge-demo"
  >
    <div
      class="t-badge"
    >
      <div
        class="t-badge__content"
      >
        
        <svg
          aria-label="通知"
          class="t-icon t-icon-notification"
        >
          <use
            href="#t-icon-notification"
          />
        </svg>
        
      </div>
      <div
        class="t-badge--basic t-badge--medium t-badge--circle t-badge--count t-has-count"
        style="right: -2px; top: -2px;"
      >
        <!--v-if-->
         2 
        <!--v-if-->
      </div>
      <!---->
    </div>
  </div>
  <div
    class="summary"
  >
    方形徽标
  </div>
  <div
    class="badge-demo"
  >
    <div
      class="t-badge"
    >
      <div
        class="t-badge__content"
      >
        
        <svg
          aria-label="通知"
          class="t-icon t-icon-notification"
        >
          <use
            href="#t-icon-notification"
          />
        </svg>
        
      </div>
      <div
        class="t-badge--basic t-badge--medium t-badge--square t-badge--count t-has-count"
        style="right: -2px; top: -2px;"
      >
        <!--v-if-->
         2 
        <!--v-if-->
      </div>
      <!---->
    </div>
  </div>
  <div
    class="summary"
  >
    气泡徽标
  </div>
  <div
    class="badge-demo"
  >
    <div
      aria-role="button"
      class="t-badge"
    >
      <div
        class="t-badge__content"
      >
        
        <button
          aria-disabled="false"
          aria-label="商店"
          class="t-button t-button--size-large t-button--base t-button--default t-button--square"
          role="button"
          type="button"
        >
          <svg
            class="t-icon t-icon-shop"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 1a2.5 2.5 0 00-2.5 2.5V5h-2a.5.5 0 00-.5.5v9c0 .28.22.5.5.5h9a.5.5 0 00.5-.5v-9a.5.5 0 00-.5-.5h-2V3.5A2.5 2.5 0 008 1zm1.5 5v2h1V6H12v8H4V6h1.5v2h1V6h3zm0-1h-3V3.5a1.5 1.5 0 113 0V5z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
          <span
            class="t-button__content"
          >
            <!---->
          </span>
          <!---->
        </button>
        
      </div>
      <div
        class="t-badge--basic t-badge--medium t-badge--bubble t-badge--count t-has-count"
      >
        <!--v-if-->
         领积分 
        <!--v-if-->
      </div>
      <!---->
    </div>
  </div>
  <div
    class="summary"
    style="margin-bottom: 16px;"
  >
    角标
  </div>
  <div
    class="t-cell t-cell--middle"
  >
    <div
      class="t-cell__left"
    >
      <!--v-if-->
      <!--v-if-->
    </div>
    <div
      class="t-cell__title"
    >
      单行标题
      <!--v-if-->
      <!--v-if-->
    </div>
    <div
      class="t-cell__note"
    >
      
      <div
        class="t-badge t-badge__ribbon-outer"
      >
        <div
          class="t-badge__content"
        >
          <!---->
        </div>
        <div
          class="t-badge--basic t-badge--medium t-badge--ribbon t-badge--count t-has-count"
          style="right: 0px; top: 0px;"
        >
          <div
            class="t-badge__ribbon--before"
            style=""
          />
           New 
          <div
            class="t-badge__ribbon--after"
            style=""
          />
        </div>
        <!---->
      </div>
      
    </div>
    <!--v-if-->
  </div>
</div>
`;
